--- a/package.json
+++ b/package.json
@@ -1,31 +1,24 @@
 {
-	"name": "college-bball-tracker-svelte",
-	"private": true,
-	"version": "0.0.1",
+	"name": "vite-template-react",
+	"version": "1.4.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"start": "vite --port 3000 --open",
+		"dev": "vite --port 3000 --open",
 		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"format": "prettier --write .",
-		"lint": "prettier --check .",
-		"test:e2e": "playwright test",
-		"test": "npm run test:e2e"
+		"serve": "vite preview --open",
+		"test": "vitest"
+	},
+	"dependencies": {
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.49.1",
-		"@sveltejs/adapter-vercel": "^5.5.2",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15",
-		"@tailwindcss/vite": "^4.0.0",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"svelte": "^5.0.0",
-		"tailwindcss": "^4.0.0",
-		"vite": "^6.0.0"
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.2.0",
+		"@vitejs/plugin-react": "^4.3.4",
+		"jsdom": "^26.0.0",
+		"vite": "^6.2.1",
+		"vitest": "^3.0.8"
 	}
 }
