--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "vite-tinybase-react",
-  "version": "1.1.1",
-  "scripts": {
-    "dev": "vite --force",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^5.4.5"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tinybase": "^5.3.0"
-  }
+	"name": "vite-template-react",
+	"version": "1.4.0",
+	"type": "module",
+	"scripts": {
+		"start": "vite --port 3000 --open",
+		"dev": "vite --port 3000 --open",
+		"build": "vite build",
+		"serve": "vite preview --open",
+		"test": "vitest"
+	},
+	"dependencies": {
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.2.0",
+		"@vitejs/plugin-react": "^4.3.4",
+		"jsdom": "^26.0.0",
+		"vite": "^6.2.1",
+		"vitest": "^3.0.8"
+	}
 }
